--- a/porkbun/config.yaml
+++ b/porkbun/config.yaml
@@ -1,6 +1,6 @@
 name: "Porkbun Dynamic DNS"
 description: "Porkbun Dynamic DNS add-on!"
-version: "0.0.3"
+version: "0.0.4"
 slug: "porkbun_dynamic_dns"
 init: false
 arch:
@@ -12,8 +12,10 @@ options:
   secret_key: null
   domain: null
   subdomains: null
+  time_update: 60
 schema:
   api_key: password
   secret_key: password
   domain: str
   subdomains: "match(^(\\*|(?:\\w+)(?:,\\w+)*)$)"
+  time_update: int(60,)
