--- a/porkbun/config.yaml
+++ b/porkbun/config.yaml
@@ -1,8 +1,10 @@
 name: "Porkbun Dynamic DNS"
 description: "Porkbun Dynamic DNS add-on!"
-version: "0.0.4"
+version: "0.0.5"
 slug: "porkbun_dynamic_dns"
 init: false
+map:
+  - addon_config:rw
 arch:
   - aarch64
   - amd64
