[porkbun] Update porkbun-ddns-rs to v0.1.0

--- a/porkbun/Dockerfile
+++ b/porkbun/Dockerfile
@@ -4,7 +4,7 @@ FROM $BUILD_FROM as build
 
 RUN apk add --no-cache --virtual .porkbun-ddns-rs-build curl unzip pkgconfig openssl-dev rust cargo
 
-RUN curl -sSL "https://github.com/edoren/porkbun-ddns-rs/archive/refs/heads/master.zip" -o porkbun-ddns-rs.zip
+RUN curl -sSL "https://github.com/edoren/porkbun-ddns-rs/archive/refs/tags/v0.1.0.zip" -o porkbun-ddns-rs.zip
 
 RUN unzip "porkbun-ddns-rs.zip" 
 RUN mv porkbun-ddns-rs-* /build
