--- a/porkbun/config.yaml
+++ b/porkbun/config.yaml
@@ -1,6 +1,6 @@
 name: "Porkbun Dynamic DNS"
 description: "Porkbun Dynamic DNS add-on!"
-version: "1.0.5"
+version: "1.0.6"
 slug: "porkbun_dynamic_dns"
 init: false
 arch:
@@ -11,11 +11,12 @@ options:
   api_key: null
   secret_key: null
   domain: null
-  subdomains: null
+  subdomains: []
   time_update: 60
 schema:
   api_key: password
   secret_key: password
   domain: str
-  subdomains: "match(^(\\*|(?:\\w+)(?:,\\w+)*)$)"
+  subdomains:
+    - "match(^(\\*|(?:\\w+)(?:,\\w+)*)$)"
   time_update: int(60,)
