[namecheap] Build out fix

--- a/namecheap/Dockerfile
+++ b/namecheap/Dockerfile
@@ -4,7 +4,7 @@ FROM golang:1.23.1-alpine3.20 as build
 
 ENV NAMECHEAT_DDNS_VERSION=1.3.0
 RUN wget "https://github.com/navilg/namecheap-ddns-docker/archive/refs/tags/${NAMECHEAT_DDNS_VERSION}.tar.gz" -O namecheap-ddns-docker.tar.gz
-RUN tar -xvf namecheap-ddns-docker.tar.gz && mv namecheap-ddns-docker-${NAMECHEAT_DDNS_VERSION} build
+RUN tar -xvf namecheap-ddns-docker.tar.gz && mv namecheap-ddns-docker-${NAMECHEAT_DDNS_VERSION} /build
 
 COPY docker-entrypoint.sh /
 RUN chmod 700 /build/container-entrypoint.sh
