--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -49,8 +49,8 @@ jobs:
             fi
           done
 
-          if [[ "${{ github.event.ref }}" =~ "^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+-.+$" ]]; then
-            addon=$(echo "${{ github.event.ref }}" | sed "s/.*-//")
+          if [[ "${{ github.event.ref }}" =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+-.+$ ]]; then
+            addon=$(echo "${{ github.event.ref }}" | sed "s/.*-//");
             changed_addons+=("\"${addon}\",");
           fi
 
