--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -50,7 +50,7 @@ jobs:
           done
 
           if [[ "${{ github.event.ref }}" =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+-.+$ ]]; then
-            addon=$(echo "${{ github.event.ref }}" | sed "s/.*-//");
+            addon=$(echo "${{ github.event.ref }}" | sed "s|.*-||");
             changed_addons+=("\"${addon}\",");
           fi
 
@@ -93,6 +93,17 @@ jobs:
         uses: home-assistant/actions/helpers/info@master
         with:
           path: "./${{ matrix.addon }}"
+
+      - name: Check add-on version & tag version
+        id: check
+        run: |
+          if [[ "${{ github.event.ref }}" =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+-${{ matrix.addon }}$ ]]; then
+            tag_version=$(echo "${{ github.event.ref }}" | sed -E 's|refs/tags/v([0-9]+\.[0-9]+\.[0-9]+)-.*|\1|');
+            if [[ "${{ steps.info.outputs.version }}" != "$tag_version" ]]; then
+              echo "Tag version mismatches config.yaml version";
+              exit 1;
+            fi
+          fi
 
       - name: Check if add-on should be built
         id: check
