--- a/rallly/config.yaml
+++ b/rallly/config.yaml
@@ -35,7 +35,7 @@ schema:
   allowed_emails:
     - email
   noreply_email: email?
-  support_email: email?
+  support_email: email
   smtp_host: str
   smtp_port: port
   smtp_secure: bool
