--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -73,8 +73,8 @@ jobs:
       matrix:
         addon: ${{ fromJson(needs.init.outputs.changed_addons) }}
         arch: ["aarch64", "amd64", "armhf", "armv7", "i386"]
-        os: ["ubuntu-latest"]
         include:
+          - os: ubuntu-latest
           - arch: aarch64
             os: ubuntu-24.04-arm
 
