--- a/porkbun/Dockerfile
+++ b/porkbun/Dockerfile
@@ -29,12 +29,12 @@ RUN apk update && apk --no-cache add tini bash libstdc++
 
 # Build arguments
 ARG BUILD_ARCH
-ARG BUILD_DATE
-ARG BUILD_DESCRIPTION
-ARG BUILD_NAME
-ARG BUILD_REF
-ARG BUILD_REPOSITORY
 ARG BUILD_VERSION
+ARG BUILD_NAME
+ARG BUILD_DESCRIPTION
+ARG BUILD_REPOSITORY
+ARG BUILD_REF
+ARG BUILD_DATE
 
 # Labels
 LABEL \
@@ -43,15 +43,15 @@ LABEL \
     io.hass.arch="${BUILD_ARCH}" \
     io.hass.type="addon" \
     io.hass.version=${BUILD_VERSION} \
-    maintainer="Manuel Sabogal <mfer32@gmail.com>" \
+    maintainer="Manuel Sabogal <personal@edoren.me>" \
     org.opencontainers.image.title="${BUILD_NAME}" \
     org.opencontainers.image.description="${BUILD_DESCRIPTION}" \
     org.opencontainers.image.vendor="Home Assistant Edoren's Add-ons" \
-    org.opencontainers.image.authors="Manuel Sabogal <mfer32@gmail.com>" \
+    org.opencontainers.image.authors="Manuel Sabogal <personal@edoren.me>" \
     org.opencontainers.image.licenses="MIT" \
     org.opencontainers.image.url="https://edoren.me" \
     org.opencontainers.image.source="https://github.com/${BUILD_REPOSITORY}" \
-    org.opencontainers.image.documentation="https://github.com/${BUILD_REPOSITORY}/blob/main/README.md" \
+    org.opencontainers.image.documentation="https://github.com/${BUILD_REPOSITORY}/blob/master/README.md" \
     org.opencontainers.image.created=${BUILD_DATE} \
     org.opencontainers.image.revision=${BUILD_REF} \
     org.opencontainers.image.version=${BUILD_VERSION}
