--- a/rallly/Dockerfile
+++ b/rallly/Dockerfile
@@ -48,7 +48,7 @@ USER nextjs
 
 COPY --from=builder --chown=nextjs:nodejs /app/scripts/docker-start.sh ./
 COPY --from=builder --chown=nextjs:nodejs /app/packages/database/prisma ./prisma
- 
+
 COPY --from=installer /app/apps/web/next.config.js .
 COPY --from=installer /app/apps/web/package.json .
 
@@ -67,12 +67,12 @@ ENV HOSTNAME=0.0.0.0
 
 # Build arguments
 ARG BUILD_ARCH
-ARG BUILD_DATE
-ARG BUILD_DESCRIPTION
-ARG BUILD_NAME
-ARG BUILD_REF
-ARG BUILD_REPOSITORY
 ARG BUILD_VERSION
+ARG BUILD_NAME
+ARG BUILD_DESCRIPTION
+ARG BUILD_REPOSITORY
+ARG BUILD_REF
+ARG BUILD_DATE
 
 # Labels
 LABEL \
@@ -81,15 +81,15 @@ LABEL \
     io.hass.arch="${BUILD_ARCH}" \
     io.hass.type="addon" \
     io.hass.version=${BUILD_VERSION} \
-    maintainer="Manuel Sabogal <mfer32@gmail.com>" \
+    maintainer="Manuel Sabogal <personal@edoren.me>" \
     org.opencontainers.image.title="${BUILD_NAME}" \
     org.opencontainers.image.description="${BUILD_DESCRIPTION}" \
     org.opencontainers.image.vendor="Home Assistant Edoren's Add-ons" \
-    org.opencontainers.image.authors="Manuel Sabogal <mfer32@gmail.com>" \
+    org.opencontainers.image.authors="Manuel Sabogal <personal@edoren.me>" \
     org.opencontainers.image.licenses="MIT" \
     org.opencontainers.image.url="https://edoren.me" \
     org.opencontainers.image.source="https://github.com/${BUILD_REPOSITORY}" \
-    org.opencontainers.image.documentation="https://github.com/${BUILD_REPOSITORY}/blob/main/README.md" \
+    org.opencontainers.image.documentation="https://github.com/${BUILD_REPOSITORY}/blob/master/README.md" \
     org.opencontainers.image.created=${BUILD_DATE} \
     org.opencontainers.image.revision=${BUILD_REF} \
     org.opencontainers.image.version=${BUILD_VERSION}
