--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -146,9 +146,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Get build date
-        id: date
-        run: echo "current=$(date --rfc-3339=seconds)" >> "$GITHUB_OUTPUT"
+      - name: Update build.yaml with metadata
+        uses: mikefarah/yq@v4.45.1
+        cmd: touch ./${{ matrix.addon }}/build.yaml && \
+             yq '.args.BUILD_NAME="${{ steps.info.outputs.name }}" |
+                 .args.BUILD_DESCRIPTION="${{ steps.info.outputs.description }}" |
+                 .args.BUILD_REF="${{ github.ref_name }}" |
+                 .args.BUILD_REPOSITORY="${{ github.repository }}" |
+                 .args.BUILD_DATE="$(date --rfc-3339=seconds)"' -i ./${{ matrix.addon }}/build.yaml
 
       - name: Build ${{ matrix.addon }} add-on
         if: steps.check.outputs.build_arch == 'true'
@@ -156,11 +161,6 @@ jobs:
         with:
           args: |
             ${{ env.BUILD_ARGS }} \
-            --build-arg BUILD_NAME="${{ steps.info.outputs.name }}" \
-            --build-arg BUILD_DESCRIPTION="${{ steps.info.outputs.description }}" \
-            --build-arg BUILD_REF="${{ github.ref_name }}" \
-            --build-arg BUILD_REPOSITORY="${{ github.repository }}" \
-            --build-arg BUILD_DATE="${{ steps.date.outputs.current }}" \
             --${{ matrix.arch }} \
             --target /data/${{ matrix.addon }} \
             --image "${{ steps.check.outputs.image }}" \
