Update devcontainer with latest required changes

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,8 @@
         "GIT_EDITOR=code --wait",
         "--privileged"
     ],
+    "workspaceFolder": "/mnt/supervisor/addons/local/${localWorkspaceFolderBasename}",
+    "workspaceMount": "source=${localWorkspaceFolder},target=${containerWorkspaceFolder},type=bind,consistency=cached",
     "containerEnv": {
         "WORKSPACE_DIRECTORY": "${containerWorkspaceFolder}"
     },
